# zerobench

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  developer-guide.md  index.md
docs/source/api/: index.md
docs/source/user-guide/: getting-started.ipynb  installation.md  jax-examples.ipynb
src/zerobench/: __init__.py  _ast.py  _benchmark.py  _jax.py  _plot.py  _units.py
tests/: test_benchmark.py  test_jax.py  test_plot.py  test_python.py  test_units.py
