[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "zerobench"
dynamic = ['version']
description = "A multidimensional benchmarking library with minimal overhead"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Pierre Chanial" }
]
dependencies = [
    "matplotlib",
    "polars",
]

[dependency-groups]
dev = [
    {include-group = 'docs'},
    'jax>=0.6; python_version=="3.10"',
    'jax>=0.9; python_version>="3.11"',
    'pytest>=9.0',
    'pytest-notebook>=0.10',
]
docs = [
    'sphinx>=7.0.0',
    'sphinx-rtd-theme>=1.3.0',
    'myst-parser>=2.0.0',
    'nbsphinx>=0.9.0',
    'jupyter>=1.0.0',
    'matplotlib>=3.7.0',
    'numpy>=1.24.0',
    'pillow>=9.0.0',
]

[tool.hatch.version]
source = 'vcs'
