[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "zerobench"
dynamic = ['version']
description = "A multidimensional benchmarking library with minimal overhead"
authors = [
    { name = "Pierre Chanial" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Topic :: Software Development :: Debuggers',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dependencies = [
    "matplotlib",
    "polars",
]

[dependency-groups]
dev = [
    {include-group = 'docs'},
    'jax>=0.6; python_version=="3.10"',
    'jax>=0.9; python_version>="3.11"',
    'pytest>=9.0',
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    'pytest-notebook>=0.10',
]
docs = [
    'sphinx>=7.0.0',
    'furo>=2024.0.0',
    'myst-parser[linkify]>=2.0.0',
    'nbsphinx>=0.9.0',
    'jupyter>=1.0.0',
    'matplotlib>=3.7.0',
    'numpy>=1.24.0',
    'pillow>=9.0.0',
    'visu-hlo>=0.1.0',
]
cuda12 = ['jax[cuda12]>=0.4']
cuda13 = ['jax[cuda13]>=0.7; python_version>="3.11"']

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "from typing_extensions import",
    "assert False, 'unreachable'",
]

[tool.pytest]
testpaths = ['tests']
addopts = [
    '--verbose',
    '--tb=short',
    '--strict-markers',
    '--strict-config',
    '--color=yes',
    '--cov=zerobench',
    '--no-cov-on-fail',
]
filterwarnings = [
    'ignore::DeprecationWarning',
    'ignore::PendingDeprecationWarning',
    'ignore::pytest.PytestRemovedIn9Warning',
]

nb_test_files = true
nb_diff_ignore = [
    '/cells/*/execution_count',
    '/cells/*/outputs',
    '/metadata/language_info',
]

[tool.hatch.version]
source = 'vcs'

[tool.ruff]
line-length = 100
fix = true           # autofix issues
force-exclude = true # useful with ruff-pre-commit plugin
src = ['src', 'tests']

[tool.ruff.lint]
select = [
    'E',      # pycodestyle-errors
    'F',      # pyflakes
    'I',      # isort
    'UP',     # pyupgrade
    'T10',    # flake8-debugger
]
ignore = ['E501']

[tool.ruff.format]
quote-style = 'single'
